-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs24, hs25
-
Component/s: hotspot
-
b46
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8018363 | 7u45 | Unassigned | P3 | Closed | Fixed | b01 |
| JDK-8015557 | 7u40 | Unassigned | P3 | Closed | Fixed | b27 |
The object count event should only send events for instances occupying more than 0.5% of the heap.
This has to be done in order to guarantee that only limited number of events are being sent.
This has to be done in order to guarantee that only limited number of events are being sent.
- backported by
-
JDK-8015557 The object count event should only send events for instances occupying more than 0.5% of the heap
-
- Closed
-
-
JDK-8018363 The object count event should only send events for instances occupying more than 0.5% of the heap
-
- Closed
-