8012086: The object count event should only send events for instances occupying more than 0.5% of the heap Reviewed-by: brutisso, jwilhelm